--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
-body {
-  background-color:pink;
+.card{
+  margin:10px;
+  padding:20px;
+  background-color:white;
+  width:40px;
+  text-align:center;
+  border-radius:8px;
+  display:inline-block;
+}
+.suit{
+  margin: 5px;
+  font-size:30px;
+  text-align: center;
+}
+.name{
+  margin: 5px;
+  font-size:24px;
+  font-weight:bold;
+  font-family:sans-serif;
+}
+.red{
+  color:red;
+}
+.card-container {
+  background-color:#ffd6a5;
+  margin:10px;
+  padding: 10px;
+  width: 3000px;
+  height: 100px;
+  display: inline-block;
+  display: flex;
 }
