--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,45 @@
-body {
+body{
   background-color:pink;
+}
+.card-container{
+    padding:50px 20px;
+    background-color:white;
+    text-align:center;
+    border-radius:8px;
+    border-color: blueviolet;
+    border-color : 20px;
+    border-style: solid;
+    display:inline-block;
+}
+.card{
+    margin:10px;
+    padding:10px;
+    background-color:grey;
+    width:50px;
+    text-align:center;
+    border-radius:8px;
+    display:inline-block;
+}
+.suit{
+    margin: 5px;
+    font-size:20px;
+}
+.name{
+    margin: 5px;
+    font-size:24px;
+    font-weight:bold;
+    font-family:sans-serif;
+}
+.red{
+    color:red;
+}
+.black{
+    color:black;
+}
+.player-hand-container{
+    margin:10px;
+    padding:15px;
+    background-color:yellowgreen;
+    text-align:center;
+    border-radius:8px;
 }
