--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,63 @@
 body {
   background-color: pink;
 }
+
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+  float: left;
+}
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.red {
+  color: red;
+}
+
+.black {
+  color: black;
+}
+
+.table {
+  min-height: 150px;
+  margin: 10px;
+  padding: 10px;
+  background-color: green;
+  border-color: brown;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.textbox {
+  text-align: center;
+  margin: 10px;
+  width: 50%;
+  padding: 10px;
+  background-color: grey;
+  position: absolute;
+  bottom: 0;
+}
+
+.button {
+  margin: auto;
+  width: 40%;
+  height: 50px;
+}
+
+.buttonsContainer {
+  display: flex;
+  justify-content: center;
+}
