--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,71 @@
 body {
   background-color: pink;
 }
+
+.table {
+  height: 250px;
+  width: 580px;
+  border: 8px solid #c26e00a8;
+  border-radius: 12px;
+  border-style: ridge;
+  background-color: rgb(0, 87, 0);
+}
+
+.game-info {
+  font-family: Arial;
+  color: white;
+  text-align: center;
+  margin: 10px;
+}
+
+.card {
+  margin: 8px;
+  padding: 12px;
+  background-color: white;
+  border-style: ridge;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.card-div {
+  background-color: rgb(161, 4, 4);
+  border-radius: 20px;
+  opacity: 80%;
+  text-align: center;
+}
+
+.buttons-div {
+  /* position: relative;
+  top: 250px; */
+  text-align: center;
+}
+
+.player-button {
+  background-color: #555555;
+  color: white;
+  font-family: Arial;
+  border-radius: 12px;
+  margin: 11px;
+  padding: 8px 11px 8px 11px;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+  padding: 11px 0 8px 0;
+}
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.red {
+  color: rgba(255, 0, 0, 0.705);
+}
+
+.black {
+  color: rgba(3, 3, 3, 0.705);
+}
