--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto+Mono:wght@200;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto+Mono:wght@200;400;600&display=swap");
 
 body {
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   line-height: 1;
   max-width: 720px !important;
   margin: 0 auto !important;
@@ -10,7 +10,7 @@ body {
 h1,
 button,
 .card {
-  font-family: 'Dela Gothic One', cursive; 
+  font-family: "Dela Gothic One", cursive;
   font-size: 32px;
 }
 
@@ -49,28 +49,29 @@ h1.results {
   width: 80vw;
   height: 48vh;
   /* to arrange the cards side by side */
-  position: relative; 
+  position: relative;
   /* display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center; */ 
+  align-items: center; */
 }
 
 .player-card {
   width: 160px;
   height: 240px;
-  background-color: #fff; 
+  background-color: #fff;
   position: relative;
+  border: 2px solid #000;
 }
 
-.player-one-card {
+.player-one-first-card {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   left: 15%;
 }
 
-.player-two-card {
+.player-two-first-card {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -81,7 +82,7 @@ h1.results {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around; 
+  justify-content: space-around;
 }
 
 .player-score {
@@ -135,11 +136,9 @@ button:disabled {
 }
 
 button:hover {
-  background-color: #E34D27;
-  border: 2px solid #E34D27;
+  background-color: #e34d27;
+  border: 2px solid #e34d27;
 }
-
-
 
 /* when page is loaded, results container is not displayed at first */
 .results-container {
