--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,148 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: pink;
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2em;
+  width: 100%;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-size: 4em;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.main-container {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(255, 133, 245),
+    rgb(0, 204, 255)
+  );
+  width: 80%;
+  height: 100%;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2em;
+}
+
+.score-board {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background-color: black;
+  border-radius: 15px;
+}
+
+.game-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  padding: 2em;
+}
+
+.player-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(221, 221, 221, 0.2);
+  padding: 1em 5em 1em 5em;
+  border-radius: 15px;
+  width: 80%;
+  height: 400px;
+}
+
+.player-turn {
+  background-color: rgba(0, 98, 255, 0.678);
+}
+
+.player-content {
+  text-align: center;
+  margin-top: 1em;
+}
+
+.player-result {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.btn-draw-card {
+  display: inline-block;
+  padding: 0.7em 1.4em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.15em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  color: #ffffff;
+  background-color: #3369ff;
+  box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+  cursor: pointer;
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
+
+.card-container {
+  margin-top: 30px;
+  padding: 10px;
+  background-color: rgb(255, 255, 255);
+  width: 100px;
+  height: 150px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+  color: black;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+
+.black {
+  color: rgb(0, 0, 0);
+}
+
+.gameInfo {
+  color: black;
+}
+
+.cardsLeft {
+  color: rgb(255, 255, 255);
+  margin-bottom: -50px;
+  margin-top: 10px;
+  padding: 5px;
+  width: auto;
+  text-align: center;
+  font-size: 0.8em;
+  background-color: #3369ff;
 }
