--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,99 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: pink;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+  padding: 3% 5%;
+}
+
+/* START BUTTON CONTAINER */
+
+.start-btn-container {
+  text-align: center;
+  margin-top: 3%;
+}
+
+/* GAME INFO */
+
+.section-gameInfoSection {
+  text-align: center;
+  width: 100%;
+  padding: 3%;
+  margin-top: 10%;
+  background-color: yellow;
+}
+.gameinfoSectionHeader {
+  color: red;
+}
+
+/*  CARD DRAW */
+
+.section-cardDrawSection {
+  width: 100%;
+  margin-top: 8%;
+}
+
+.cardDrawContainer {
+  width: 100%;
+  padding: 3% 5%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.cardDrawDiv1,
+.cardDrawDiv2 {
+  background-color: aqua;
+  padding: 5%;
+  text-align: center;
+  display: none;
+}
+
+/* SCORE SECTION */
+.score-section {
+  width: 100%;
+  margin-top: 8%;
+}
+
+.score-container {
+  width: 100%;
+  padding: 3% 5%;
+  display: flex;
+  justify-content: space-around;
+}
+
+/* PLAYER BUTTON SECTION */
+
+.playerButtonSection {
+  text-align: center;
+  width: 100%;
+  padding: 3%;
+  margin-top: 10%;
+  background-color: GREEN;
+}
+
+.playerButtonContainer {
+  display: flex;
+  justify-content: space-around;
+}
+.player1Button,
+.player2Button {
+  background-color: blueviolet;
+  color: #fff;
+  border-radius: 12%;
+  padding: 2%;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.player1Button:hover,
+.player2Button:hover {
+  transform: scale(1.1);
 }
