--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,10 @@ body {
 
 .card-container {
   margin: auto;
-  background: grey;
-  border-radius: 4px;
+  background: darkgray;
+  border-radius: 8px;
+  border-color: dimgray;
+  border-style: solid;
   text-align: center;
   width: 300px;
   height: 150px;
