--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,53 @@
 body {
   background-color: pink;
+  text-align: center;
+}
+
+.card {
+  margin: 20px 30px 20px 30px;
+  padding: 10px;
+  background-color: white;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+
+.black {
+  color: black;
+}
+
+.card-container {
+  margin: auto;
+  background: rgb(190, 156, 156);
+  border-radius: 8px;
+  border-color: blue;
+  border-style: solid;
+  text-align: center;
+  width: 300px;
+  height: 150px;
+}
+
+.button {
+  margin-left: 10px;
+}
+.output {
+  text-align: center;
+  margin: 8px;
 }
