--- a/styles.css
+++ b/styles.css
@@ -60,12 +60,26 @@ body {
 .button {
   margin-left: 10px;
 }
-.output {
+/* .output {
   width: 300px;
   order: 2;
   text-align: center;
   margin: 8px;
+} */
+
+.output {
+  text-align: left;
+  font-size: medium;
+  order: 2;
+  width: 300px;
+  background-color: navy;
+  color: white;
+  font-family: monospace;
+  margin: 30px auto;
+  padding: 10px;
+  border-radius: 3px;
 }
+
 .high-low {
   border: solid 3px;
   border-color: gold;
