--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
   border-style: solid;
   text-align: center;
   height: 300px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .player1 {
@@ -58,7 +59,7 @@ body {
 }
 
 .button {
-  margin-left: 10px;
+  margin: 10px;
 }
 /* .output {
   width: 300px;
