--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,10 @@ body {
   background-color: navy;
   color: white;
   font-family: monospace;
-  margin: 30px auto;
+  margin: 20px 20px 60px 20px;
   padding: 10px;
+  border: solid 2px;
+  border-color: black;
   border-radius: 3px;
 }
 
