--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,46 @@
 body {
   background-color: pink;
 }
+.button {
+  margin: 10 px;
+}
+.container {
+  margin: 10px;
+  padding: 50px;
+  background-color: whitesmoke;
+  width: 200px;
+  height: 100px;
+}
+
+.card-container {
+  margin: 10px;
+  padding: 20px;
+  background-color: grey;
+  width: 100px;
+  height: 50px;
+}
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: white;
+  border: solid 2px;
+  border-color: grey;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.red {
+  color: red;
+}
